Renamed the class name for the headers.

--- a/app/templates/doctor/patient/assessment.html
+++ b/app/templates/doctor/patient/assessment.html
@@ -98,7 +98,7 @@
             <div class="patient-bg assessment">
         
                 <!-- CHIEF COMPLAINTS -->
-                <div class="med-header A">CHIEF COMPLAINTS</div>
+                <div class="med-header">CHIEF COMPLAINTS</div>
                 <div class="inputBox subject">
                     <input type="text" name="subject" value="{{ patient[2] }}" disabled>
                     <span>SUBJECT</span>
@@ -108,13 +108,13 @@
                 </div>
         
                 <!-- HISTORY OF PRESENT ILLNESS -->
-                <div class="med-header H">HISTORY OF PRESENT ILLNESS</div>
+                <div class="med-header">HISTORY OF PRESENT ILLNESS</div>
                 <div class="p_row ten">
                     <textarea name="h_illness" disabled rows="2" placeholder="Enter the present history of the illness">{{ patient[4] }}</textarea>
                 </div>
         
                 <!-- VITAL SIGNS -->
-                <div class="med-header I">VITAL SIGNS</div>
+                <div class="med-header">VITAL SIGNS</div>
                 <div class="p_row vitalRowA">
                     <div class="inputBox vitalsA">
                         <input type="text" name="blood_p" value="{{ patient[5] }}" disabled>
@@ -162,7 +162,7 @@
                 </div>
         
                 <!-- PHYSICAL EXAMINATIONS -->
-                <div class="med-header J">PHYSICAL EXAMINATIONS</div>
+                <div class="med-header">PHYSICAL EXAMINATIONS</div>
                 <div class="p_row vitalRowC">
                     <p>HEAD</p>
                     <div class="inputBox vitalsC">
@@ -313,7 +313,7 @@
                 </div>
         
                 <!-- DIAGNOSIS -->
-                <div class="med-header K">DIAGNOSIS</div>
+                <div class="med-header">DIAGNOSIS</div>
                 <div class="p_row vitalRowH">
                     <textarea name="diagnosis" disabled rows="2" placeholder="Enter additional comments">{{ patient[39] }}</textarea>
                 </div>
