--- a/app/templates/doctor/patient/labtest_request.html
+++ b/app/templates/doctor/patient/labtest_request.html
@@ -81,7 +81,7 @@
             <div class="patient-bg request">
 
                 <!-- PATIENT INFORMATION -->
-                <div class="med-header A">PATIENT INFORMATION</div>
+                <div class="med-header">PATIENT INFORMATION</div>
                 
                 <div class="p_row rowOne">
                     <div class="inputBox labsubject">
@@ -132,7 +132,7 @@
                 <input hidden type="text" name="dateofRequest" id="requestdate">
 
                 <!-- LABORATORY JOB ORDER -->
-                <div class="med-header jobOrder">LABORATORY JOB ORDER</div>
+                <div class="med-header">LABORATORY JOB ORDER</div>
                 <div class="p_row rowEleven">
                     <!-- HEMATOLOGY -->
                     <div class="testRow">
