--- a/app/templates/doctor/patient/results.html
+++ b/app/templates/doctor/patient/results.html
@@ -85,7 +85,7 @@
             <div class="patient-bg report">
 
                 <!-- PATIENT INFORMATION -->
-                <div class="med-header A">PATIENT INFORMATION</div>
+                <div class="med-header">PATIENT INFORMATION</div>
 
                 <div class="p_row rowOne">
                     <div class="inputBox labsubject">
@@ -126,7 +126,7 @@
 
                 <div id="contentToToggle" style="display: none;">
                     <!-- LABORATORY JOB ORDER -->
-                    <div class="med-header jobOrder">LABORATORY JOB ORDER</div>
+                    <div class="med-header">LABORATORY JOB ORDER</div>
                     <div class="p_row rowEleven">
 
                         <!-- HEMATOLOGY -->
@@ -594,7 +594,7 @@
                 </div>
                 
                 <!-- LABORATORY REPORT -->
-                <div class="med-header labReport" id="r_header">LABORATORY REPORT</div>
+                <div class="med-header" id="r_header">LABORATORY REPORT</div>
                 <div class="p_row rowOne">
                     <div class="inputBox conduct">
                         <input type="text" value="{{ report[0] }}" name="medtech_name" disabled>
@@ -607,7 +607,7 @@
                 </div>
 
                 <!-- LABORATORY REPORT -->
-                <div class="med-header labReport" id="r_header">LABORATORY REPORT</div>
+                <div class="med-header" id="r_header">LABORATORY REPORT</div>
                 <center>
                     <div class="lab-result">
                         <table cellpadding="5" id="resultTable" class="table table-striped" style="width: 1020px;"> 
