--- a/app/templates/medtech/laboratory_report.html
+++ b/app/templates/medtech/laboratory_report.html
@@ -64,7 +64,7 @@
 
             <!-- PATIENT INFORMATION -->
             <center>
-                <div class="med-header A">PATIENT INFORMATION</div>
+                <div class="med-header">PATIENT INFORMATION</div>
             </center>
             
             <div class="p_row rowOne">
@@ -107,7 +107,7 @@
             <div id="contentToToggle" style="display: none;">
                 <!-- LABORATORY JOB ORDER -->
                 <center>
-                    <div class="med-header jobOrder">LABORATORY JOB ORDER</div>
+                    <div class="med-header">LABORATORY JOB ORDER</div>
                 </center>
 
                 <div class="p_row rowEleven">
@@ -578,7 +578,7 @@
             
             <!-- LABORATORY REPORT -->
             <center>
-                <div class="med-header labreport">LABORATORY REPORT</div>
+                <div class="med-header">LABORATORY REPORT</div>
             </center>
 
             <div class="p_row rowfifteen">
