--- a/app/templates/medtech/laboratory_test.html
+++ b/app/templates/medtech/laboratory_test.html
@@ -73,7 +73,7 @@
         <div class="patient-bg test">
 
             <!-- PATIENT INFORMATION -->
-            <div class="med-header A">PATIENT INFORMATION</div>
+            <div class="med-header">PATIENT INFORMATION</div>
             
             <div class="p_row rowOne">
                 <div class="inputBox labsubject">
@@ -113,7 +113,7 @@
             </div>
 
             <!-- LABORATORY JOB ORDER -->
-            <div class="med-header jobOrder">LABORATORY JOB ORDER</div>
+            <div class="med-header">LABORATORY JOB ORDER</div>
             <div class="p_row rowEleven">
 
                 <!-- HEMATOLOGY -->
@@ -579,7 +579,7 @@
             </center>
             
             <!-- LABORATORY REPORT -->
-            <div class="med-header labReport" id="r_header">LABORATORY REPORT</div>
+            <div class="med-header" id="r_header">LABORATORY REPORT</div>
             
             <div class="p_row rowOne">
                 <div class="inputBox labsubject">
