--- a/app/templates/receptionist/dashboard/dashboard.html
+++ b/app/templates/receptionist/dashboard/dashboard.html
@@ -53,7 +53,7 @@
                 <img src="{{ url_for('static', filename='images/Add Appointment.png') }}">
             </div>
         </a>
-        <a href="#">
+        <a href="{{ url_for('receptionist.appointment') }}">
             <div class="reschedule-icon">
                 <img src="{{ url_for('static', filename='images/Reschedule Appointment.png') }}">
             </div>
