--- a/app/static/base_style.css
+++ b/app/static/base_style.css
@@ -18,16 +18,10 @@
 }
 
 /* -------------------------------------------- SIDEBAR DOCCARE LOGO -------------------------------------------- */
-.cms-logo {
-    display: flex;
+.cms-logo { 
     margin-top: 35px;
     margin-bottom: 25px;
     align-items: center;
-    font-size: 32px;
-    width: 100%;  
-    height: 62px; 
-    border-radius: 30px; 
-    transition: width 0.2s;
 }
 
 .cms-logo img {
@@ -36,26 +30,15 @@
     margin-right: 55px;
 }
 
-.cms-logo h4 {
-    font-weight: 900;
-    color: var(--blueA);
-}
-
-.cms-logo p {
-    font-weight: 400;
-    margin-left: 15px;
-    color: var(--darkBlue);
-}
-
 /* -------------------------------------------- SIDEBAR -------------------------------------------- */
 .sidenav-bg {
     width: 80px;  
     height: 100vh;
     background-color: var(--blueC);
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.3); 
     position: fixed;  
     padding: 8px;
     z-index: 1;
+    transition: width 0.3s ease;
 }
 
 /* logout */
@@ -164,25 +147,33 @@ ul li p {
     font-size: 12px;
     display: flex;
     align-items: center;
-    height: 60px; 
-    background-color: white;
-    border-radius: 360px; 
+    height: 65px; 
     overflow: hidden;
     margin-bottom: 25px;
 }
 
 .sidenav-user-bg:hover {
     display: flex;
-    width: 200px;
+    width: 500px;
 }
 
 .sidenav-user-bg div {
-    display: none;
-    margin-left: 20px;
+    position: relative;
+    transition: all 0.2s ease-out;
+    opacity: 0;
+    visibility: hidden;
+    background-color: var(--darkBlue);
+    color: white;
+    padding: 10px;
+    border-radius: 10px;
+    left: 25px;
 }
 
 .sidenav-user-bg:hover div {
-    display: block;
+    left: 20px;
+    opacity: 1;
+    visibility: visible;
+    z-index: 1;
 }
 
 .user-img {
@@ -198,6 +189,35 @@ ul li p {
     display: flex;
     top: 70px;
     left: 1140px;
+}
+
+.doctor-bg img {
+    position: relative;
+    width: 1400px;
+    top: 10px;
+    left: 110px;
+    height: 150px;
+    border-radius: 20px;
+} 
+
+.greetings-name {
+    position: absolute;
+    display: flex;
+    gap: 5px;
+    top: 50px;
+    left: 170px;
+    color: white;
+}
+
+.greetings-name p {
+    font-size: 25px;
+}
+
+.greetings {
+    position: absolute;
+    top: 90px;
+    left: 170px;
+    color: white;   
 }
 
 /* -------------------------------------------- PATIENT TABLE -------------------------------------------- */
