--- a/app/templates/admin/user_management.html
+++ b/app/templates/admin/user_management.html
@@ -30,8 +30,8 @@
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/Xerxes.png') }}" class="user-img">
             <div>
-                <h3>Eda Grace P.</h3>
-                <p>Admin</p>
+                <h3>{{ info[0] }}</h3>
+                <p>{{ info[1] }}</p>
             </div>
         </div>
         <ul>
