--- a/app/templates/doctor/patient/medical_history.html
+++ b/app/templates/doctor/patient/medical_history.html
@@ -44,8 +44,8 @@
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/Eda.png') }}" class="user-img">
             <div>
-                <h3>Eda Grace P.</h3>
-                <p>Family Medicine</p>
+                <h3>{{ info[0] }}</h3>
+                <p>{{ info[2] }}</p>
             </div>
         </div>
         <ul>
