--- a/app/templates/medtech/dashboard.html
+++ b/app/templates/medtech/dashboard.html
@@ -34,8 +34,8 @@
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/Edward.png') }}" class="user-img">
             <div>
-                <h3>Eda Grace P.</h3>
-                <p>Medtech</p>
+                <h3>{{ info[0] }}</h3>
+                <p>{{ info[2] }}</p>
             </div>
         </div>
         <ul>
@@ -46,16 +46,27 @@
         </ul>
     </div>
     <!-- DASHBOARD -->
-    <div class="notification-container">
-        <div class="notif-header">
-            <div class="notif-box">
-              <p class="request-header">LABORATORY TEST REQUEST</p>
-              <span id="notifs"></span>
-            </div>
-            <p id="mark-all">Mark all as read</p>
+    <div class="doctor-bg">
+        <img src="{{ url_for('static', filename='images/Medtech BG.png') }}">
+        <div class="greetings-name">
+            <p>Welcome,</p>
+            <h2>{{ info[0] }}</h2>
         </div>
+        <div class="greetings">
+            <p>Have a nice day at work!</p>
+        </div>
+    </div>
 
-        <main id="notificationList">
+    <div class="notif-header">
+        <div class="notif-box">
+          <p class="request-header">LABORATORY TEST REQUEST</p>
+          <span id="notifs"></span>
+        </div>
+        <p id="mark-all">Mark all as read</p>
+    </div>
+
+    <div class="notification-container">
+        <div id="notificationList">
             {% for labrequest in labrequests %}
                 <form method="GET" action="/medtech/laboratory_test/">
                     <input id="order_id" name="order_id" value="{{ labrequest[0] }}" hidden>
@@ -73,7 +84,7 @@
                     </button>
                 </form>
             {% endfor %}
-        </main>
+        </div>
     </div>
 
     <script>
