--- a/app/templates/medtech/profile.html
+++ b/app/templates/medtech/profile.html
@@ -27,8 +27,8 @@
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/Edward.png') }}" class="user-img">
             <div>
-                <h3>Eda Grace P.</h3>
-                <p>Medtech</p>
+                <h3>{{ info[0] }}</h3>
+                <p>{{ info[2] }}</p>
             </div>
         </div>
         <ul>
