--- a/app/templates/receptionist/profile.html
+++ b/app/templates/receptionist/profile.html
@@ -35,8 +35,8 @@
         <div class="sidenav-user-bg">
             <img src="{{ url_for('static', filename='images/Kurt.png') }}" class="user-img">
             <div>
-                <h3>Eda Grace P.</h3>
-                <p>Receptionist</p>
+                <h3>{{ info[0] }}</h3>
+                <p>{{ info[1] }}</p>
             </div>
         </div>
         <ul>
