--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -54,12 +54,14 @@
                                         <td> {{ row[1] }} </td>
                                         <td> {{ row[2] }} </td>
                                         <td> 
-                                            <p class="status done">
-                                                <strong> {{ row[3] }} </strong>
-                                            </p>
+                                            <div class="status-cell">
+                                                <p class="status">
+                                                    <strong> {{ row[3] }} </strong>
+                                                </p>
+                                            </div>
                                         </td>
                                         <td class="table__cell">
-                                            <a href="{{ url_for('receptionist.logout') }}" class="doccare-view-appoinment-icon">
+                                            <a href="{{ url_for('receptionist.view_appointment', reference_number=row[0]) }}" class="doccare-view-appoinment-icon">
                                                 <span class="material-symbols-outlined">info</span>
                                             </a>
                                             <a href="{{ url_for('receptionist.reschedule', reference_number=row[0]) }}" class="doccare-edit-appoinment-icon">
@@ -108,10 +110,13 @@
                         <span class="material-symbols-outlined add-icon">&#xe147;</span>
                     </a>
                      <!-- Include these script tags at the end of the body content -->
-                    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-                    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-                    <script src="{{ url_for('static', filename='receptionist_script.js') }}"></script>
-                    <script src="{{ url_for('static', filename='logout.js') }}"></script>
+                     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+                     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+                     <script src="{{ url_for('static', filename='receptionist_script.js') }}"></script>
+                     <script src="{{ url_for('static', filename='logout.js') }}"></script>         
+                     <script>
+                        applyStatusStyles();
+                    </script>            
                 </main>
             </div>
         </body>
