--- a/app/templates/receptionist/appointment/appointment.html
+++ b/app/templates/receptionist/appointment/appointment.html
@@ -112,11 +112,8 @@
                      <!-- Include these script tags at the end of the body content -->
                      <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
                      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-                     <script src="{{ url_for('static', filename='receptionist_script.js') }}"></script>
-                     <script src="{{ url_for('static', filename='logout.js') }}"></script>         
-                     <script>
-                        applyStatusStyles();
-                    </script>            
+                     <script src="{{ url_for('static', filename='receptionist_script.js') }}" defer></script>
+                     <script src="{{ url_for('static', filename='logout.js') }}"></script>                  
                 </main>
             </div>
         </body>
