--- a/app/static/admin_style.css
+++ b/app/static/admin_style.css
@@ -103,3 +103,110 @@
     display: flex; 
     justify-content: center;
 }
+
+/* -------------------------------------------- USER INFORMATION-------------------------------------------- */
+
+/* --------------------------- BACK ICON ---------------------------- */
+.back-icon img {
+    position: absolute;
+    width: 20px;
+    z-index: 1;
+    top: 60px;
+    left: 145px;
+}
+
+.back-icon img:active {
+    transform: translateX(2px);
+}
+
+/* -------------------------------------------- PATIENT DETAILS NAVBAR -------------------------------------------- */
+.nav-underline {
+    display: flex;
+    margin-right: 150px;
+    top: 50px;
+    left: 200px;
+    position: absolute;
+}
+
+.nav-item:active {
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.1); 
+    transform: translateY(1px);
+}
+
+.nav-underline .nav-link {
+    border: none; 
+    text-decoration: none; 
+    padding: 0.5rem 1rem; 
+    color: var(--grayA); 
+}
+
+.nav-underline .nav-link.active {
+    border-bottom: 2px solid var(--blueD);
+    color: var(--blueD); 
+}
+
+
+.user-bg {
+    position: absolute;
+    width: 1230px;  
+    height: 610px; 
+    background-color: white;
+    box-shadow: 10px 10px 20px 10px var(--blueC);
+    top: 85px;
+    left: 200px;
+}
+
+/* Input boxes */
+.inputBox.username, .inputBox.password{
+    width: 400px;
+}
+
+.inputBox.gender, .inputBox.user_role {
+    width: 100px;
+}
+
+.inputBox.fName, .inputBox.mName, .inputBox.lName{
+    width: 300px;
+}
+
+
+/* dropdown styles */
+input, select {
+    padding: 10px;
+    border: 2px solid var(--blueB);
+    border-radius: 5px;
+    outline-color: var(--blueB);
+    color: var(--darkBlue);
+    font-size: 1em;
+}
+
+.inputBox {
+    margin: 20px 20px  ; 
+}
+
+.u_row{
+    display: flex;
+    margin-left: 100px;
+    justify-content: left;
+}
+
+.u_row.firstRow {
+    
+    margin-top: 100px;
+    gap: 10px; 
+     
+}
+
+
+.u_row.secondRow {
+
+    gap: 20px; 
+   
+}
+
+.u_row.thirdRow {
+
+    margin-bottom: 120px; 
+
+}
+
