--- a/app/templates/admin/user_management/user_management.html
+++ b/app/templates/admin/user_management/user_management.html
@@ -87,7 +87,7 @@
                             </form> 
 
                             <!-- DELETE INFO-->
-                            <form id="deleteForm_{{ user.id }}" method="POST" action="/admin/delete_user/">
+                            <form id="deleteForm_{{ user.id }}" method="POST" action="{{ url_for('admin.delete_user') }}">
                                 <div class="delete-icon">
                                     <input id="user_id" name="user_id" value="{{ user.id }}" type="hidden">
                                     <button type="button" onclick="confirmation('{{ user.id }}')" style="background: none; border: none;">
@@ -135,7 +135,7 @@
                     <div class="modal-body">
                     User's Information has been deleted successfully!
                     </div>
-                    <a href="{{ url_for('doctor.user') }}"> 
+                    <a href="{{ url_for('admin.user_management') }}"> 
                     <div class="modal-footer">
                         <button id="successSave" type="button" class="btn-done">DONE</button>
                     </div>
@@ -153,7 +153,7 @@
                     <div class="modal-body">
                     Error in deleting user information. Please try again.
                     </div>
-                    <a href="{{ url_for('doctor.user') }}">
+                    <a href="{{ url_for('admin.user_management') }}">
                     <div class="modal-footer">
                         <button id="errorDismiss" type="button" class="btn-done">OKAY</button>
                     </div>
@@ -179,7 +179,7 @@
         } );
 
         // CONFIRMATION BEFORE DELETION
-        function confirmation(patientId){
+        function confirmation(UserID){
             const confirmationModal = document.getElementById("confirmationModal");
             confirmationModal.style.display = "block";
 
@@ -187,9 +187,9 @@
             const cancelDelete = document.getElementById("cancelDelete");
             
             confirmDelete.addEventListener("click", function() {
-                document.getElementById("deleteForm_" + patientId).submit();
+                document.getElementById("deleteForm_" + UserID).submit();
             });
-    
+
             cancelDelete.addEventListener("click", function() {
                 confirmationModal.style.display = "none";
             });
